# cluey

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  CONTRIBUTING.rst  LICENSE  README.rst  contributing.html  credits.html  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js
.doctrees/: contributing.doctree  credits.doctree  environment.pickle  index.doctree  quickstart.doctree
.github/workflows/: docs.yml  publish.yml  testing.yml
_sources/: index.rst.txt
cluey/: __init__.py  cli.py  testing.py
cluey/examples/: arithmetic.py  extendedml.py  greet.py  ml.py  productionml.py  stringtools.py
docs/: conf.py  index.rst
tests/: test_cli.py  test_examples_arithmetic.py  test_examples_extendedml.py  test_examples_greet.py  test_examples_ml.py  test_examples_productionml.py  test_examples_stringtools.py
