[tool.poetry]
name = "cluey"
version = "0.1.0"
description = "Build clever, class-based command line apps with minimal boilerplate."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/rbturnbull/cluey"
documentation = "https://rbturnbull.github.io/cluey/"
homepage = "https://github.com/rbturnbull/cluey"
keywords = ["command-line interface"]
# For classifiers see https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = ">=0.4.0"
rich = ">=10.16.1"



[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
ipython = ">=8.1.1"
ipykernel = ">=6.6.1"
coverage = ">=5.5"
autopep8 = ">=1.5.7"
Sphinx = ">=4.2.0"
nbsphinx = ">=0.8.7"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autobuild = ">=2021.3.14"
myst-parser = ">=0.15.2"
pre-commit = ">=2.15.0"
sphinx-copybutton = ">=0.4.0"
black = ">=21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}
jupyter = ">=1.0.0"
pyment = ">=0.3.3"

[tool.black]
line-length = 120
skip_string_normalization = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cluey-example-extendedml = "cluey.examples.extendedml:ExtendedMLApp.main"
cluey-example-productionml = "cluey.examples.productionml:ProductionMLApp.main"
cluey-example-productionml-tools = "cluey.examples.productionml:ProductionMLApp.tools"
